--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,11 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    <IfModule mod_fcgid.c>
+        FcgidIOTimeout 90
+        FcgidConnectTimeout 30
+    </IfModule>
+
     RewriteEngine On
 
     # Handle Authorization Header
