--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,12 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    <Directory /var/www/vhosts/allu.kz/httpdocs/public>
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+    </Directory>
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
